--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </form>
         <h2>Blog Posts</h2>
         <section class="blog-posts">
-          <ul class-"posts"></ul>
+          <ul class="posts">
+          </ul>
         </section>
     </main>
     <script src="app.js"></script>
